syntax = "proto3";

/**
 * Author: jsongo<jsongo@qq.com>
 */

service PeopleService {
	rpc GetList(GetListReq) returns (GetListRsp) {} 
}

message People {
    int64 id = 1;
    string username = 2;
    string nickname = 3;
    int64 age = 4;
    string tel = 5;
    string avatar = 6;
    string friends = 7;
    string face = 8;
}

message GetListReq {
    int64 start = 1;
    int64 pageSize = 2;
}

message GetListRsp {
    repeated People people  = 1;
}
